<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:text="@string/forgot_password"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_marginBottom="30dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/viewExpYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/provide_your_account_s_email_for_which_you_want_to_reset_your_password"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtForgotPasswordEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <ProgressBar
            android:id="@+id/forgetPasswordProgressbar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:cornerRadius="10dp"
            app:iconGravity="textStart" />
    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnForgotPasswordBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:iconGravity="textStart"
        app:iconTint="@color/black" />
</LinearLayout>
